Fixed some minor errors in README and code

--- a/set-cover.ipynb
+++ b/set-cover.ipynb
@@ -102,7 +102,7 @@
     "```multiple_mutation_strength``` function is used to mutate multiple sets in the solution. It takes the solution and the number of sets to be mutated as input and returns the mutated solution. The number of sets to be mutated is calculated based on the strength parameter. The strength parameter is used to calculate the number of sets to be mutated.\n",
     "\n",
     "\n",
-    "This last tweak is used in the hill climbing algorithm to mutate the solution.\n"
+    "This last tweak is used in this experiment.\n"
    ]
   },
   {
@@ -277,7 +277,6 @@
    "outputs": [],
    "source": [
     "def tabu_search(initial_solution, SETS, COSTS, NUM_SETS, max_steps, tabu_tenure, max_tabu_size, rng, tweak, neighbor_sample_size=10, patience=50):  \n",
-    "    \"\"\"Simplified Tabu Search implementation for Set Cover\"\"\"\n",
     "    current_solution = initial_solution.copy()\n",
     "    current_fitness = fitness(current_solution, SETS, COSTS)\n",
     "    best_solution = current_solution.copy()\n",
