--- a/set-cover.ipynb
+++ b/set-cover.ipynb
@@ -344,7 +344,9 @@
    "metadata": {},
    "source": [
     "```generate_sets``` helper function to generate the sets given universe size, number of sets and density\n",
+    "\n",
     "```plot_result``` helper function to plot the results\n",
+    "\n",
     "```run_experiments``` runs algorithms given the instances and plots the results"
    ]
   },
@@ -435,8 +437,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results show that Tabu search performs better than the other algorithms but requires more time to converge (~140x more time than HC, ~350x more calls to the fitness function than SA and 16x more calls than RMCH). SA is the fastest algorithm but does not perform as well as Tabu search or HC. \n",
+    "Results show that Tabu search performs better than the other algorithms but requires more time to converge (~140x more time than HC, ~350x more calls to the fitness function than SA and 16x more calls than HC). SA is the fastest algorithm but does not perform as well as Tabu search or HC. \n",
     "So HC seems to be the best trade-off between performance and time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hill Climbing used for all the instances in the following experiment."
    ]
   },
   {
